# py-utils

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
covid plot/: main.py
covid-plot/: README.md  main.py
covid-plot/data/: Untitled.ipynb  covid_df_analysis.ipynb  lstmpredictions.csv  predictions.csv
covid-plot/data/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  covid_df_analysis-checkpoint.ipynb
docker/: Docker-tutorial.md
federated-learning/: README.md
federated-learning/socket/: client.py  requirements.txt
federated-learning/socket/SERVER/: model.json  server.py  server_utils.py
ml/: nestedcv.py
plotly_tutorial/: plotly_nb.html
simul/: balls.py  bouncing_ball.py  box_utils.py  hard_spheres.py  integrator.py  integrators.py  physics.py  planets.py  potential.py  potentials.py  requirements.txt
src/ml/: data-eploration.ipynb  data_utils.py  nestedcv.py
tests/: conftest.py  test_data_utils.py  test_ml.py  test_templates.py
ubuntu-config/: atom-packages.md  install-cmake.md  install-conda.sh  install-cuda.md  install-opencv.md  py-scripts.md
