[metadata]
name = Py-Utils
description = utilities for data handling in python
author = Mattia Ceccarelli, Riccardo Scheda
platforms = linux, unix, osx, win32
license = MIT
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
packages =
	ml

install_requires =
	scikit-learn>=0.24.2
	numpy>=1.20
	pandas>=1.3

python_requires = >= 3.7

package_dir =
	=src

zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
ml = py.typed

[flake8]
max-line-length = 120
